# ghostypedia

./: COMPLETE_INTEGRATION_SUMMARY.md  LICENSE  README.md  package-lock.json
.kiro/specs/frontend-authentication/: design.md  requirements.md  tasks.md
.kiro/specs/ghostypedia-backend/: design.md  tasks.md
.kiro/specs/ghostypedia-core/: requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
ai-service/: .env.example  .gitignore  IMPLEMENTATION.md  MIGRATION_TO_UV.md  QUICK_START.md  README.md  UV_GUIDE.md  pyproject.toml  requirements.txt  setup.sh  test_service.py  verify_setup.py
ai-service/app/: main.py
ai-service/app/models/: __init__.py
ai-service/app/services/: __init__.py  digital_twin.py  recommendation_engine.py
ai-service/app/utils/: __init__.py
backend/: .env.example  API_DOCUMENTATION.md  DATABASE_SETUP.md  DATABASE_UTILITIES.md  DOCUMENTATION_INDEX.md  IMAGEKIT_GUIDE.md  README.md  SECURITY.md  jest.config.js  package-lock.json  package.json  seed-data.sql
backend/src/: index.ts
backend/src/config/: database.ts  env.ts  imagekit.ts  migration-runner.ts  migrations.ts  redis.ts  schema.sql
backend/src/middleware/: auth.middleware.ts  cache.middleware.ts  error.middleware.ts  index.ts  rate-limit.middleware.ts  security.middleware.ts  validation.middleware.ts
backend/src/models/: index.ts
deployment/: .dockerignore  .env.example  README.md  ai-service.Dockerfile  backend.Dockerfile  docker-compose.yml
frontend/: API_INTEGRATION_GUIDE.md  NAVIGATION_FLOW.md  package-lock.json  package.json  vitest.config.ts
(+89 files in other folders)
